@@ -2,6 +2,10 @@ This file contain the log of changes for the main development branch (trunk).
 More detailed information about incremental changes can be found in the
 history management of subversion.
 
+2013-xx-xx releases/3.11.7
+        - tuned parameters for using MKL PARDISO in the hope to make it
+          more robust [r2435]
+
 2013-11-16 releases/3.11.6
         - updates to Matlab Interface build system (by T. Kelman)
         - fix to updates of R Interface [r2416, #223]
